--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
-language:
+title: Hey,
+subtitle: Not just Blog. Not only ML or coding.
+description: Show your code and see your salvage.
+author: Section
+language: en
 timezone:
 
 # URL
