--- a/themes/material/_config.yml
+++ b/themes/material/_config.yml
@@ -157,14 +157,14 @@ toc:
 
 # SNS Menu
 sns:
-    email: youremail@email.com
+    email: cengxs13@tsinghua.org.cn
     facebook: "https://www.facebook.com/facebook"
     twitter: "https://twitter.com/twitter"
     googleplus: "https://www.google.com/"
     weibo:
     instagram:
     tumblr:
-    github:
+    github: "https://github.com/thu-zxs"
     linkedin:
     zhihu:
     bilibili:
